--- a/style.css
+++ b/style.css
@@ -4,7 +4,9 @@
     font-family: 'Poppins', sans-serif;
     box-sizing: border-box;
 }
-
+html{
+    scroll-behavior: smooth;
+}
 body{
     background: #080808;
     color: #fff;
@@ -364,7 +366,7 @@ nav .fas{
         background-image: url(assets/image3.jpg);
     }
     .header-text{
-        margin-top: 100%;
+        margin-bottom: 100%;
         font-size: 16px;
     }
     .header-text h1{
@@ -385,6 +387,7 @@ nav .fas{
         height: 100vh;
         padding-top: 50px;
         z-index: 2;
+        transition: right 0.5s;
     }
     
     nav ul li{
@@ -397,5 +400,34 @@ nav .fas{
         top: 25px;
         left: 25px;
         cursor: pointer;
+    }
+
+    .sub-title{
+        font-size: 40px;
+    }
+
+    .about-col-1, .about-col-2{
+        flex-basis: 100%;
+    }
+
+    .about-col-1{
+        margin-bottom: 30px;
+    }
+
+    .about-col-2{
+        font-size: 14px;
+    }
+
+    .tab-links{
+        font-size: 16px;
+        margin-right: 20px;
+    }
+
+    .contact-left, .contact-right{
+        flex-basis: 100%;
+    }
+
+    .copyright{
+        font-size: 14px;
     }
 }
